Move edit.js stuff to mediawiki.action.edit.js, and remove wikibits dependency. Wrap publicly accessible functions inside mw.toolbar & provide legacy shortcuts to those. Make the traditional toolbar use $.fn.textSelection, to reduce code duplication. This fixes Bug 27116, Bug 15705, Bug 11011

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -40,7 +40,9 @@ span.texhtml { font-family: serif; }
 #editform, #toolbar, #wpTextbox1 {
 	clear: both;
 }
-
+#toolbar img {
+	cursor: pointer;
+}
 div#mw-js-message {
 	margin: 1em 5%;
 	padding: 0.5em 2.5%;
